# Relay-Protocol

./: .gitattributes  .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
examples/: _demo_util.py  client.py  provision.py  server.py
examples/mitm/: active_mitm.py  curious_client.py  mitm_addon.py  victim_client.py
scripts/: check.ps1  check.sh
src/securews/: __init__.py  ca.py  channel.py  crypto.py  errors.py  framing.py  handshake.py  identity.py  logging_policy.py  protocol.py  rekey.py  replay.py  transport.py
tests/: conftest.py  test_ca.py  test_channel.py  test_crypto_kat.py  test_framing.py  test_framing_fuzz.py  test_handshake.py  test_identity.py  test_kat_noise.py  test_no_plaintext_logging.py  test_rekey.py  test_replay.py  test_revocation.py  test_secret_bytes.py  test_transport_wss.py
