[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "secure-websocket-sdk"
version = "0.1.0"
description = "Experimental end-to-end encrypted transport over WebSocket, built on the Noise Protocol Framework (Noise XX + ChaCha20-Poly1305 + X25519). NOT AUDITED."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "secure-websocket-sdk contributors" }]
keywords = ["websocket", "noise-protocol", "e2ee", "encryption", "chacha20-poly1305", "security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Communications",
]
dependencies = [
    "cryptography>=41.0",
    "noiseprotocol>=0.3.1",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.5",
    "mypy>=1.10",
    "bandit>=1.7",
    "pip-audit>=2.7",
]

[project.urls]
Homepage = "https://github.com/your-org/secure-websocket-sdk"
Documentation = "https://github.com/your-org/secure-websocket-sdk/tree/main/docs"
Issues = "https://github.com/your-org/secure-websocket-sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/securews"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
filterwarnings = ["error::DeprecationWarning:securews.*"]

[tool.coverage.run]
branch = true
source = ["securews"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = ["pragma: no cover", "raise NotImplementedError", "if TYPE_CHECKING:"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests", "examples"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF", "S"]
ignore = [
    "S101",  # assert used (fine in tests; handled per-file below)
    # This project is bilingual (RU/EN) and its docstrings quote the Russian
    # source design doc verbatim, so intentional Cyrillic is not "ambiguous".
    "RUF001",
    "RUF002",
    "RUF003",
    # __all__ is grouped by category for readability, not alphabetised.
    "RUF022",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "N802", "N806"]
"examples/**" = ["S", "T201"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
strict_equality = true
packages = ["securews"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["noise.*"]
ignore_missing_imports = true

[tool.bandit]
# B101 assert_used excluded for tests via CLI; library code avoids asserts for control flow.
skips = []
